pmerr.txt
lib/pm.c:112:52: error: expected ';' after expression
    strncpy(pm_conf_path, argv[1], strlen(argv[1]))
                                                   ^
                                                   ;
1 error generated.
lib/enc.c:84:14: warning: passing 'uint8_t [32]' to parameter of type 'char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
    strncpy( PM_INST->master_key, m_key, SALTSIZE + M_KEYSIZE);
             ^~~~~~~~~~~~~~~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/secure/_string.h:128:28: note: expanded from macro 'strncpy'
                __builtin___strncpy_chk (dest, __VA_ARGS__, __darwin_obsz (dest))
                                         ^~~~
lib/enc.c:104:16: warning: passing 'uint8_t [64]' to parameter of type 'const char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
        strlen(PM_INST->plaintext), 0, CONTEXT, PM_INST->derived_key);
               ^~~~~~~~~~~~~~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/string.h:82:28: note: passing argument to parameter '__s' here
size_t   strlen(const char *__s);
                            ^
lib/enc.c:138:21: warning: address of array 'PM_INST->plaintext' will always evaluate to 'true' [-Wpointer-bool-conversion]
    if ( ! PM_INST->plaintext ) {
         ~ ~~~~~~~~~^~~~~~~~~
lib/enc.c:151:17: warning: passing 'uint8_t [64]' to parameter of type 'char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
        strncpy(PM_INST->plaintext, pswd, pswd_len); //null term??
                ^~~~~~~~~~~~~~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/secure/_string.h:128:28: note: expanded from macro 'strncpy'
                __builtin___strncpy_chk (dest, __VA_ARGS__, __darwin_obsz (dest))
                                         ^~~~
lib/enc.c:154:27: warning: passing 'uint8_t [64]' to parameter of type 'const char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
        pswd_len = strlen(PM_INST->plaintext);
                          ^~~~~~~~~~~~~~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/string.h:82:28: note: passing argument to parameter '__s' here
size_t   strlen(const char *__s);
                            ^
lib/enc.c:161:37: warning: passing 'uint8_t [64]' to parameter of type 'const char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
    char * user_derived_key = crypt(PM_INST->plaintext, salt);
                                    ^~~~~~~~~~~~~~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/unistd.h:544:25: note: passing argument to parameter here
char    *crypt(const char *, const char *);
                           ^
lib/enc.c:161:57: warning: passing 'uint8_t [9]' to parameter of type 'const char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
    char * user_derived_key = crypt(PM_INST->plaintext, salt);
                                                        ^~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/unistd.h:544:39: note: passing argument to parameter here
char    *crypt(const char *, const char *);
                                         ^
lib/enc.c:170:9: warning: passing 'uint8_t [64]' to parameter of type 'const char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
        PM_INST->plaintext, pswd_len, CONTEXT, user_derived_key, OPSLIMIT, MEMLIMIT, THREADS);
        ^~~~~~~~~~~~~~~~~~
libhydrogen/hydrogen.h:270:70: note: passing argument to parameter 'passwd' here
int hydro_pwhash_deterministic(uint8_t *h, size_t h_len, const char *passwd, size_t passwd_len,
                                                                     ^
lib/enc.c:170:48: warning: passing 'char *' to parameter of type 'const uint8_t *' (aka 'const unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
        PM_INST->plaintext, pswd_len, CONTEXT, user_derived_key, OPSLIMIT, MEMLIMIT, THREADS);
                                               ^~~~~~~~~~~~~~~~
libhydrogen/hydrogen.h:272:46: note: passing argument to parameter 'master_key' here
                               const uint8_t master_key[hydro_pwhash_MASTERKEYBYTES],
                                             ^
lib/enc.c:185:26: warning: passing 'uint8_t [64]' to parameter of type 'const char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
    char * emsg = strchr(PM_INST->plaintext, ';');
                         ^~~~~~~~~~~~~~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/string.h:76:26: note: passing argument to parameter '__s' here
char    *strchr(const char *__s, int __c);
                            ^
10 warnings generated.
lib/cli.c:11:32: warning: excess elements in array initializer [-Wexcess-initializers]
        "check", "ls", "help", "conf" };
                               ^~~~~~
lib/cli.c:15:77: warning: excess elements in array initializer [-Wexcess-initializers]
    char verb_type[num_verbs] = { 0 , 0  , 1  , 0   , 0  , 0  , 0  , 2 , 0, 0};
                                                                            ^
lib/cli.c:17:34: error: use of undeclared identifier 'conf'; did you mean 'scanf'?
        delete, check, ls, help, conf };
                                 ^~~~
                                 scanf
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/stdio.h:177:6: note: 'scanf' declared here
int      scanf(const char * __restrict, ...) __scanflike(1, 2);
         ^
lib/cli.c:17:34: warning: incompatible function pointer types initializing 'void (*)(pm_inst *, char *)' with an expression of type 'int (const char *restrict, ...)' [-Wincompatible-function-pointer-types]
        delete, check, ls, help, conf };
                                 ^~~~
lib/cli.c:203:75: warning: incompatible integer to pointer conversion initializing 'void *' with an expression of type 'int' [-Wint-conversion]
        data = (void *[6]) { name, salt, master_key, PM_INST->ciphertext, 1, validate };
                                                                          ^
lib/cli.c:203:78: warning: incompatible integer to pointer conversion initializing 'void *' with an expression of type 'char' [-Wint-conversion]
        data = (void *[6]) { name, salt, master_key, PM_INST->ciphertext, 1, validate };
                                                                             ^~~~~~~~
lib/cli.c:209:63: warning: incompatible integer to pointer conversion initializing 'void *' with an expression of type 'int' [-Wint-conversion]
        data = (void *[5]) { name, salt, PM_INST->ciphertext, 1, validate };
                                                              ^
lib/cli.c:209:66: warning: incompatible integer to pointer conversion initializing 'void *' with an expression of type 'char' [-Wint-conversion]
        data = (void *[5]) { name, salt, PM_INST->ciphertext, 1, validate };
                                                                 ^~~~~~~~
lib/cli.c:302:10: warning: incompatible pointer types assigning to 'void **' from 'char *[1]' [-Wincompatible-pointer-types]
    data = ( char * [1] ) { name };
         ^ ~~~~~~~~~~~~~~~~~~~~~~~
lib/cli.c:348:35: warning: passing 'uint8_t [64]' to parameter of type 'const char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
        if ( strcmp(i_mkey, crypt(PM_INST->plaintext, i_salt) ) ) {
                                  ^~~~~~~~~~~~~~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/unistd.h:544:25: note: passing argument to parameter here
char    *crypt(const char *, const char *);
                           ^
lib/cli.c:467:44: warning: incompatible integer to pointer conversion initializing 'void *' with an expression of type 'char' [-Wint-conversion]
    void * * data = ( void * [2] ) { name, ukey };
                                           ^~~~
lib/cli.c:803:22: warning: passing 'const unsigned char *' to parameter of type 'const char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
        strcpy(this, sqlite3_column_text(stmt, 0) );
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/secure/_string.h:84:33: note: expanded from macro 'strcpy'
                __builtin___strcpy_chk (dest, __VA_ARGS__, __darwin_obsz (dest))
                                              ^~~~~~~~~~~
11 warnings and 1 error generated.
lib/pmsql.c:51:66: warning: cast to smaller integer type 'int' from 'void *' [-Wvoid-pointer-to-int-cast]
            bind_res[i] = sqlite3_bind_int(base_stmt->stmt, i+1, (int) bind_data[i] );
                                                                 ^~~~~~~~~~~~~~~~~~
1 warning generated.
